Closed Bug 165227 Opened 22 years ago Closed 22 years ago

Flash Content Causes Browser to Crash [@nsHttpChannel::ProcessNormal]

Categories

(Camino Graveyard :: Plug-ins, defect)

PowerPC
macOS
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sun.tzu, Assigned: sfraser_bugs)

References

()

Details

(Keywords: crash, regression)

Crash Data

Attachments

(5 files)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20020828
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20020828

Loading the page from this site causes the brower to crash. I believe it has to
do with the flash plugin because the rest of the page is simple and basic HTML
which doesn't look like it could cause any damage.

Reproducible: Always

Steps to Reproduce:
1.Load Chimera
2.Enter into address: http://www.kungfoolx.com/
3.Crashes Browser

Actual Results:  
Standard crash window. Creates 2 crash logs. One for Navigator another for
SystemUIServer.

Expected Results:  
Should have loaded the page with no browser crash.
Attached file Navigator Log
Attached file SystemUIServer log
*** Bug 164960 has been marked as a duplicate of this bug. ***
This seems to have been introduced recently... more fallout from the 1.0 ->
1.0.1 change? Seems to be Flash related, but no plugin code in the stack...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: crash
Summary: Flash Content Causes Browser to Crash → Flash Content Causes Browser to Crash [@nsHttpChannel::ProcessNormal]
FWIW, after loading this url in latest mozilla build, I got the spinning color
cursor of death. Can't use the app at this point. If you take a look at the url
in MS IE 5.2, the leafs are animating in flash object without the same problem.
Tested under 10.2.
also crashes on 10.1.5 (and 10.2 for chris) when visiting the Apple quicktime
movie trailer page (http://www.apple.com/trailers/) and the Fox page
(http://fox.com).

i'll see if this occurs with builds from 8/24 and 8/23.
interesting --when i test using http://www.apple.com/trailers/ it crashes with
today's build, but not with y'day's (2002.08.27.05). kinda strange, since pink
saw the same crash y'day (but at http://fox.com/).
Keywords: regression
i also see the spinning color wheel of death when loading kungfoolx.com.

i also got the spinning color wheel of death (hang) when loading the following
two urls in two tabs with y'day's build --would that be this bug or another? let
me know if i should spin this off separately...

http://www.apple.com/trailers/disney/spirited_away.html
http://www.spiritedaway.net
Severity: critical → blocker
pls let me know if this hang is the same as this bug, or if it should be filed
seperately. here's how i generated the Sampler report:

1. visited http://www.apple.com/trailers/disney/spirited_away.html
2. clicked on the QT image to start loading the movie trailer.
3. when i got the spinning color wheel of doom (hung chimera), i ran Sampler
for about 5sec (attached).

note: once the trailer finished loading, the spinning wheel went away and i
regained control over chimera.
unclear if the hang i saw (comment 10) is caused by this bug, so spun off bug
165325 for now.
This has little to do with the website. Chimera crashes on www.macromedia.com as
well as www.homestarrunner.com and www.joecartoon.com.
My debug build does not crash, but an opt build on my machine does.
*** Bug 164989 has been marked as a duplicate of this bug. ***
*** Bug 165224 has been marked as a duplicate of this bug. ***
*** Bug 165291 has been marked as a duplicate of this bug. ***
*** Bug 165316 has been marked as a duplicate of this bug. ***
This is happening because of the "leak" fix in bug 164276. The 'delete listener' has been 
removed on the trunk.
Taking
Assignee: bnesse → sfraser
Fix checked in, r=bryner
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Fixed.
Verified in the 2002-08-29-05 NB. There is a different issue when loading the 
http://www.kungfoolx.com/ that causes the spinning color cursor to appear
multiple times. Sarah L mention that is related to 151917.
Status: RESOLVED → VERIFIED
Crash Signature: [@nsHttpChannel::ProcessNormal]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: