Fix bug 165227 by removing a 'delete' that was wrongly transferred from the trunk. r=bryner